change font and fix layout issues

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ h1 {
     border-radius: 20px;
     border: 3px solid black;
     background-color:orange;
-    width: 1000px;
+    width: 1030px;
     padding: 20px;
     padding-right: -100px;
     margin: 40px auto;
@@ -35,15 +35,17 @@ h1 {
 
 .recipe-content {
     /* border: 3px solid rgb(255, 41, 201); */
-    width: 650px;
+    width: 680px;
     height: 200px;
     padding: 13px 10px 10px 30px;
     display: inline-block;
+    font-family: 'DM Sans', sans-serif;
 }
 
 .more-info-section {
     /* border: 3px solid rgb(17, 0, 255); */
     display: inline-block;
+    margin-top: -7px;
 }
 
 ul {
@@ -57,21 +59,27 @@ ul li {
     width: fit-content;
     height: 50px;
     display: inline-block;
-    margin-right: 10px;
+    margin-right: 30px;
     padding: 0px;
 }
 
 ul li p, ul li h2 {
     /* border: 3px solid rgb(185, 202, 26); */
     padding: 0px;
-    margin: 0px 0px 15px 0px;
+    margin: 0px 0px 12px 0px;
 
+}
+
+ul li h2 {
+    font-size: 20px;
 }
 a {
     /* border: 3px solid rgb(185, 202, 26); */
-    display: inline-block;
     text-decoration: none;
-    margin-left: 50px;
+    display: inline-block;
+    margin-left: 35px;
+    margin-top: 20px;
+    vertical-align:top
 }
 
 .recipe-content button {
@@ -79,7 +87,7 @@ a {
     border-radius: 5px;
     border: 2px solid black;
     box-shadow: 5px 5px black;
-    transition: all ease-in 0.2s;
+    transition: all ease-in 0.1s;
 
 
     height: 40px;
@@ -91,6 +99,6 @@ a {
 .recipe-content button:hover {
     box-shadow: none;
     transform: translateY(4px);
-    transition: all ease-in 0.2s;
+    transition: all ease-in 0.1s;
     opacity: 1;
 }
